Fix alignment and scaling for carousel images

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+.carousel {
+    max-width: 50vw;
+    margin: auto;
+}
 img {
-    max-height: 50vw;
+    height: 30vw;
+}
+.navbar .active {
+    border-bottom: 1px solid white;
 }
